# idiap-devtools

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.reuse/: dep5
conda/: meta.yaml
doc/: api.rst  cli.rst  conf.py  develop.rst  index.rst  install.rst  links.rst  nitpick-exceptions.txt  release.rst  usage.rst
src/devtools/: click.py  dav.py  profile.py  python.py  release.py  update_pins.py  utils.py
src/devtools/gitlab/: __init__.py  changelog.py  release.py  runners.py
src/devtools/scripts/: changelog.py  cli.py  dav.py  env.py  fullenv.py  gitlab.py  release.py
src/devtools/scripts/gitlab/: __init__.py  badges.py  changelog.py  getpath.py  jobs.py  lasttag.py  release.py  runners.py  settings.py
src/idiap_devtools/: click.py  conda.py  profile.py  python.py
src/idiap_devtools/gitlab/: __init__.py  changelog.py  release.py
src/idiap_devtools/scripts/: update_pins.py
src/idiap_devtools/scripts/gitlab/: __init__.py  badges.py  changelog.py  getpath.py  lasttag.py  release.py  runners.py  settings.py
tests/: __init__.py  test_devtools.py  test_release.py
